fixed post_uplad popup problem (z-index)

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -6109,7 +6109,9 @@ a.badge:focus {
 	width: 90%;
 	padding: 0% 5% 0% 5%;
 	height: 66px;
-	background-color: #ffa21d;
+  background-color: #ffa21d;
+  position: fixed;
+  z-index: 3;
 }
 .header_lft {
 	float: left;
@@ -6843,7 +6845,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f58c20', end
 .register_sec ul li a:hover{ text-decoration:underline;}
 
 .register_sec ul li input[type="submit"]:hover .popup_sec{ display:block;} 
-.popup_sec{ width:500px; height:auto; margin:auto; border: 4px solid #FFF; padding:20px; background:#f7f6f7; box-shadow:0px 0px 10px #000; left:0px; right:0px; top:15%; position:absolute;}
+.popup_sec{ width:500px; height:auto; margin:auto; border: 4px solid #FFF; padding:20px; background:#f7f6f7; box-shadow:0px 0px 10px #000; left:0px; right:0px; top:15%; position:fixed; z-index: 5;}
 .clos_btn{ width:100%; height:auto; float:left; clear:both; margin-bottom: 20px;margin-top: -12px;}
 .clos_btn img { float:right; cursor:pointer;}
 .pop_hdr{ width:100%; height:auto; float:left; background:url(../images/h1_lin.png) bottom left repeat-x; font-size:17px; color:#5d5959;  font-family:"Helvetica Neue"; text-align:center; padding-bottom:16px; margin-bottom:40px;}
